positional_derive/tests/ui/enums-with-unit-variants.stderr
error: wrong enum variant

         = help: unit variants are not supported

 --> tests/ui/enums-with-unit-variants.rs:5:5
  |
5 |     Row1,
  |     ^^^^
