positional_derive/tests/ui/enums-with-unit-variants.rs
use positional_derive::ToPositionalRow;

#[derive(ToPositionalRow)]
enum MyData {
    Row1,
    Row2,
}

fn main() {}
